--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --config ./src/config/.mocharc.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/Darya-Lapitskaya/Puppeter_lesson/issues"
   },
-  "homepage": "https://github.com/Darya-Lapitskaya/Puppeter_lesson#readme"
+  "homepage": "https://github.com/Darya-Lapitskaya/Puppeter_lesson#readme",
+  "dependencies": {
+    "assert": "^2.0.0",
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3",
+    "puppeteer": "^12.0.1"
+  }
 }
