--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --config ./src/config/.mocharc.js"
+    "test": "mocha --config ./src/config/.mocharc.js",
+    "report": "npx mocha --spec src/tests/**/NewTestSecond.js --reporter mochawesome"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,9 @@
     "chai": "^4.3.4",
     "mocha": "^9.1.3",
     "puppeteer": "^12.0.1"
+  },
+  "devDependencies": {
+    "mochawesome": "^7.0.1",
+    "mochawesome-report-generator": "^6.0.1"
   }
 }
